docs: Rename duplicate section label sec:regrid in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -2900,7 +2900,7 @@ using the \textsc{Kappa} command \ndfcopy.  For example
 \end{htmlonly}
 
 \subsection{\xlabel{regridding}Regridding your Data}
-\label{sec:regrid}
+\label{sec:regriddata}
 
 To change the pixel size use the \Kappa\ command \compave. The following example
 increases the pixel size from 4\,arcsec to 8\,arcsec by using a
